@@ -21,7 +21,6 @@
 #include "synthdata.h"
 #include "midiwidget.h"
 #include "midicontroller.h"
-#include "midicontrollerlist.h"
 #include "midiguicomponent.h"
 #include "module.h"
 #include "midislider.h"
