@@ -19,22 +19,22 @@
 <context>
     <name>GuiWidget</name>
     <message>
-        <location filename="../guiwidget.cpp" line="45"/>
+        <location filename="../guiwidget.cpp" line="44"/>
         <source>&amp;Add Preset</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../guiwidget.cpp" line="49"/>
+        <location filename="../guiwidget.cpp" line="48"/>
         <source>&amp;Overwrite Preset</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../guiwidget.cpp" line="54"/>
+        <location filename="../guiwidget.cpp" line="53"/>
         <source>Presets for this configuration: 0</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../guiwidget.cpp" line="146"/>
+        <location filename="../guiwidget.cpp" line="145"/>
         <source>Presets for this configuration: %1</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3126,17 +3126,17 @@ Save changes?</source>
 <context>
     <name>MidiControllerModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="66"/>
+        <location filename="../midiwidget.cpp" line="65"/>
         <source>type: %1 channel: %2 param: %3</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="76"/>
+        <location filename="../midiwidget.cpp" line="75"/>
         <source>Module</source>
         <translation>Modul</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="76"/>
+        <location filename="../midiwidget.cpp" line="75"/>
         <source>MIDI Controller / Parameter</source>
         <translation type="unfinished"></translation>
     </message>
@@ -3144,102 +3144,102 @@ Save changes?</source>
 <context>
     <name>MidiWidget</name>
     <message>
-        <location filename="../midiwidget.cpp" line="222"/>
+        <location filename="../midiwidget.cpp" line="221"/>
         <source>&amp;Log</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="226"/>
+        <location filename="../midiwidget.cpp" line="225"/>
         <source>Set Mi&amp;n</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="230"/>
+        <location filename="../midiwidget.cpp" line="229"/>
         <source>Set Ma&amp;x</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="234"/>
+        <location filename="../midiwidget.cpp" line="233"/>
         <source>&amp;Reset Min/Max</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="245"/>
+        <location filename="../midiwidget.cpp" line="244"/>
         <source>Omni</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="254"/>
+        <location filename="../midiwidget.cpp" line="253"/>
         <source>MIDI C&amp;hannel:</source>
         <translation>MIDI-&amp;Kanal:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="265"/>
+        <location filename="../midiwidget.cpp" line="264"/>
         <source>Add to &amp;Parameter View</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="275"/>
+        <location filename="../midiwidget.cpp" line="274"/>
         <source>&amp;Enable note events</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="278"/>
+        <location filename="../midiwidget.cpp" line="277"/>
         <source>&amp;Follow Configuration Dialog</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="281"/>
+        <location filename="../midiwidget.cpp" line="280"/>
         <source>Follow &amp;MIDI</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="288"/>
+        <location filename="../midiwidget.cpp" line="287"/>
         <source>&amp;Bind</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="292"/>
+        <location filename="../midiwidget.cpp" line="291"/>
         <source>&amp;Clear Binding</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="296"/>
+        <location filename="../midiwidget.cpp" line="295"/>
         <source>Clear &amp;All</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="299"/>
+        <location filename="../midiwidget.cpp" line="298"/>
         <source>&amp;Toggle MIDI Sign</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="411"/>
+        <location filename="../midiwidget.cpp" line="410"/>
         <source>This will erase all presets for this configuration. Continue?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="421"/>
+        <location filename="../midiwidget.cpp" line="420"/>
         <source>Add this parameter to frame:</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="434"/>
+        <location filename="../midiwidget.cpp" line="433"/>
         <source>Frame &apos;%1&apos; does not exist. Create?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="440"/>
+        <location filename="../midiwidget.cpp" line="439"/>
         <source>Add frame to tab:</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="449"/>
+        <location filename="../midiwidget.cpp" line="448"/>
         <source>Tab &apos;%1&apos; does not exist. Create?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="472"/>
+        <location filename="../midiwidget.cpp" line="471"/>
         <source>Parameter name:</source>
         <translation>Parametername:</translation>
     </message>
@@ -3313,12 +3313,12 @@ Save changes?</source>
 <context>
     <name>ModuleModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="150"/>
+        <location filename="../midiwidget.cpp" line="149"/>
         <source>MIDI Sign</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="150"/>
+        <location filename="../midiwidget.cpp" line="149"/>
         <source>Module / Parameter</source>
         <translation type="unfinished"></translation>
     </message>
